test/spec_vectors/unreached-invalid/fail/module_10.wat
(module (func $type-unconsumed-poly0 (unreachable) (select)))